Dead code deleted, pom cleared, but not at all.